# botprompts

./: .editorconfig  .env.sample  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: alembic.ini  logging.dev.json  logging.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 17876c4ea29d_added_description_to_prompts_tables.py  1bda0f0b5860_restructured_revision_table.py  22343e0c71fe_removed_description_and_prompt_text_.py  2884b880c101_added_prompts_and_prompts_history_tables.py  5e2265e6b9d7_added_revision_table.py  93a96fad9c69_added_revision_id_column_to_prompts_.py  d1d52e5c9c0d_added_cascade_to_promptrecord.py  d972eee83c94_initial_set_of_tables.py  fc8341b0214e_restructured_prompt_id_to_revisions_.py
backend/app/: app.py  config.py  main.py  routes.py
backend/app/core/: error_handling.py  errors.py
backend/app/core/auth/: __init__.py  authorization.py  constants.py  errors.py  oauth2.py  password.py  utils.py
backend/app/core/notifications/: email.py
backend/app/core/profile/: routing.py
backend/app/core/resources/: adapters.py  constants.py  dependencies.py  models.py  responses.py  routers.py  schemas.py
backend/app/core/sys/users/: adapters.py  constants.py  manager.py  models.py  routing.py  schemas.py
backend/app/core/sys/variables/: constants.py  (+4 more)
backend/app/database/: adapters.py  base.py  errors.py  helper.py  meta.py  types.py
backend/app/modules/prompts/: adapters.py  background.py  models.py  routing.py  schemas.py
backend/app/utils/: limiter.py  strings.py  types.py
(+55 files in other folders)
