[tool.poetry]
name = "botprompts"
version = "1.0.1"
description = "A repository of prompts for ChatGPT and similar conversational bots"
authors = ["ltnyet <130899831+ltnyet@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.ruff]
line-length = 100

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
